--- a/META.yml
+++ b/META.yml
@@ -14,18 +14,23 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 5.009, CPAN::Meta::Converter version 2.132830'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Dist-Zilla-Plugin-Test-TrailingSpace
+provides:
+  Dist::Zilla::Plugin::Test::TrailingSpace:
+    file: lib/Dist/Zilla/Plugin/Test/TrailingSpace.pm
+    version: v0.0.3
 requires:
   Dist::Zilla::Plugin::InlineFiles: 0
   Dist::Zilla::Role::PrereqSource: 0
   Moose: 0
   namespace::autoclean: 0
+  perl: 5.012
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Dist-Zilla-Plugin-Test-TrailingSpace
   repository: ssh://hg@bitbucket.org/shlomif/perl-Dist-Zilla-Plugin-Test-TrailingSpace
-version: 0.0.2
+version: 0.0.3
